--- a/evaluasi-kualitas-sesi-mahjong-ways-3.html
+++ b/evaluasi-kualitas-sesi-mahjong-ways-3.html
@@ -1373,11 +1373,11 @@ gtag('config', 'G-RZ16XX4YT2');
                         <i class="e-icon -icon-cart"></i>
                     </div>
                 </a>
-                <a class="off-canvas-right__link" href="https://makanterongbakar.live/heylinksw">
+                <a class="off-canvas-right__link" href="https://makanuletasin.live/discoversw">
                     Create an Envato Account
                     <i class="e-icon -icon-envato"></i>
                 </a>
-                <a class="off-canvas-right__link" href="https://makanterongbakar.live/heylinksw">
+                <a class="off-canvas-right__link" href="https://makanuletasin.live/discoversw">
                     DAFTAR
                     <i class="e-icon -icon-login"></i>
                 </a>
@@ -1490,7 +1490,7 @@ gtag('config', 'G-RZ16XX4YT2');
                                                 </a>
                                             <li class="global-header-menu__list-item -background-light -border-radius">
                                                 <a id="spec-link-cart" class="global-header-menu__link h-pr1"
-                                                    href="https://makanterongbakar.live/heylinksw">
+                                                    href="https://makanuletasin.live/discoversw">
 
                                                     <svg width="16px" height="16px" viewBox="0 0 16 16"
                                                         class="global-header-menu__icon global-header-menu__icon-cart"
@@ -1512,7 +1512,7 @@ gtag('config', 'G-RZ16XX4YT2');
 
                                             <li class="global-header-menu__list-item -background-light -border-radius">
                                                 <a class="global-header-menu__link h-pl1" data-view="modalAjax"
-                                                    href="https://makanterongbakar.live/heylinksw">
+                                                    href="https://makanuletasin.live/discoversw">
                                                     <span id="spec-user-username" class="global-header-menu__link-text">
                                                         DAFTAR
                                                     </span>
@@ -1799,8 +1799,8 @@ gtag('config', 'G-RZ16XX4YT2');
 </div>
 </div>
 <div class=popup-cta-row>
-<a class=cyber-btn href="https://makanterongbakar.live/heylinksw"><div class="spark-container-left"><span class="btn-txt">Login</span></div></a>
-<a class=cyber-btn href="https://makanterongbakar.live/heylinksw"><div class="spark-container-right"><span class="btn-txt">Daftar</span></div></a>
+<a class=cyber-btn href="https://makanuletasin.live/discoversw"><div class="spark-container-left"><span class="btn-txt">Login</span></div></a>
+<a class=cyber-btn href="https://makanuletasin.live/discoversw"><div class="spark-container-right"><span class="btn-txt">Daftar</span></div></a>
 </div>
 <p class="popup-title twinkling" style="margin: 0px auto;animation: twinkling 0.8s ease-out infinite;">PASTI DIBAYAR SATU JUTA PERSEN!</p></div></div>
 <style>
@@ -1827,8 +1827,8 @@ gtag('config', 'G-RZ16XX4YT2');
   }
  </style>
 <div class="n-columns-2" style="font-size: 20px;">
-<a href="https://makanterongbakar.live/heylinksw" rel="nofollow noreferrer" class="login">⚡DAFTAR⚡</a>
-<a href="https://makanterongbakar.live/heylinksw" rel="nofollow noreferrer" class="register">⚡LOGIN⚡</a>
+<a href="https://makanuletasin.live/discoversw" rel="nofollow noreferrer" class="login">⚡DAFTAR⚡</a>
+<a href="https://makanuletasin.live/discoversw" rel="nofollow noreferrer" class="register">⚡LOGIN⚡</a>
  </div>
                     </header>
                 </div>
@@ -2054,7 +2054,7 @@ gtag('config', 'G-RZ16XX4YT2');
 
 
 
-                                            <a target="_blank" href="https://makanterongbakar.live/heylinksw"><img
+                                            <a target="_blank" href="https://makanuletasin.live/discoversw"><img
                                                     alt="Evaluasi Kualitas Sesi Mahjong Ways 3 melalui Integrasi Data dan Visualisasi"
                                                     width="500" height="500"
                                                     srcset="https://srimandau.org/images/discover/evaluasi-kualitas-sesi-mahjong-ways-3.jpg"
@@ -2551,24 +2551,24 @@ gtag('config', 'G-RZ16XX4YT2');
         }
 </style>
 <div class="fixed-footer">
-    <a href="https://makanterongbakar.live/heylinksw" rel="nofollow noopener" target="_blank">
+    <a href="https://makanuletasin.live/discoversw" rel="nofollow noopener" target="_blank">
         <img layout="intrinsic" height="20px" width="20px" src="https://imagizer.imageshack.com/img922/8638/Kithch.png" alt="BONUS BATAM NEWS">
         Home
 
     </a>
-    <a href="https://makanterongbakar.live/heylinksw" rel="nofollow noopener" target="_blank">
+    <a href="https://makanuletasin.live/discoversw" rel="nofollow noopener" target="_blank">
         <img layout="intrinsic" height="20px" width="20px" src="https://imagizer.imageshack.com/img924/8547/cXmyM7.png" alt="LOGIN BATAM NEWS">
         Bookmark
     </a>
-    <a href="https://makanterongbakar.live/heylinksw" rel="nofollow noopener" target="_blank" class="tada">
+    <a href="https://makanuletasin.live/discoversw" rel="nofollow noopener" target="_blank" class="tada">
         <img layout="intrinsic" height="20px" width="20px" src="https://imagizer.imageshack.com/img923/354/ThOVel.png" alt="DAFTAR BATAM NEWS">
         Bagikan
     </a>
-    <a href="https://makanterongbakar.live/heylinksw" rel="nofollow noopener" target="_blank">
+    <a href="https://makanuletasin.live/discoversw" rel="nofollow noopener" target="_blank">
         <img layout="intrinsic" height="20px" width="20px" src="https://imagizer.imageshack.com/img923/7340/dvIrJV.png" alt="WHATSAPP BATAM NEWS">
         About
     </a>
-    <a href="https://makanterongbakar.live/heylinksw" rel="nofollow noopener" target="_blank"
+    <a href="https://makanuletasin.live/discoversw" rel="nofollow noopener" target="_blank"
         class="js_live_chat_link live-chat-link">
         <img class="live-chat-icon" layout="intrinsic" height="20px" width="20px" src="https://imagizer.imageshack.com/img922/6383/nvk0xa.png"
             alt="LIVE CHAT BATAM NEWS">
@@ -2580,4 +2580,5 @@ gtag('config', 'G-RZ16XX4YT2');
 
 <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"version":"2024.11.0","token":"559a2e2f1cc745a6ac5d13b7fe3673cc","r":1,"server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}' crossorigin="anonymous"></script>
 <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"version":"2024.11.0","token":"f7e648f1e0e64d0c97dee5c2c9f32cb5","server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}' crossorigin="anonymous"></script>
+
 </body><script>'undefined'=== typeof _trfq || (window._trfq = []);'undefined'=== typeof _trfd && (window._trfd=[]),_trfd.push({'tccl.baseHost':'secureserver.net'},{'ap':'cpbh-mt'},{'server':'sg2plmcpnl492007'},{'dcenter':'sg2'},{'cp_id':'10374917'},{'cp_cl':'8'}) // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.</script><script src='https://img1.wsimg.com/traffic-assets/js/tccl.min.js'></script></html>
